Fixed alignment

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -110,7 +110,7 @@
   }
 
   .image-text {
-    top: calc(25%) !important;
+    top: calc(15%) !important;
     padding: 0 0% !important;
   }
 
